feat: adicionadas configurações de rota no vercel